--- a/dev/scss/_news.scss
+++ b/dev/scss/_news.scss
@@ -1,16 +1,6 @@
-.tales{
-  width: 100%;
-}
-
 .carousel-inner{
-  display: flex;
-  width:100%;
-  max-height: 500px !important;
+  max-height: 500px;
 }
-.carousel-inner .img {
-
-}
-
 
 .section_name{
   color: white;
